--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -265,4 +265,5 @@
     <string name="em_an_com_chua">Em an com chua?</string>
     <string name="_1">1</string>
     <string name="now">now</string>
+    <string name="backbutton">backButton</string>
 </resources>
