add layout search message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -266,4 +266,5 @@
     <string name="_1">1</string>
     <string name="now">now</string>
     <string name="backbutton">backButton</string>
+    <string name="searchbutton">Tìm kiếm</string>
 </resources>
